--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 {% for thing in info %}
       <br>
       <h3>{{thing[0]}} : {{thing[1]}}</h3>
-      <p><a href = '{{thing[2]}}/'> {{thing[3]}}</p>
+      <p><a href = '{{thing[2]}}/'> {{thing[3]}}</a></p>
 
       </br>
       
